# activity-mcp

./: .gitignore  CHANGELOG.md  README.md  eslint.config.ts  flake.nix  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  projects.json  pyproject.toml  test_e2e.py  timesheet.py  tsconfig.json
.api/: api.json
.api/apis/clickup/: index.d.ts  index.js  schemas.d.ts
.github/workflows/: lint.yml  release.yml
src/: index.ts
src/actions/: simple.ts  timesheet.ts
src/actions/constants/: index.ts
src/clickup/: index.ts
src/git/: index.ts
src/github/: index.ts
src/google/: index.ts
src/harvest/: index.ts
src/slack/: index.ts
src/time/: index.ts
src/timing/: index.ts
