[project]
name = "activity-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "g4f>=0.5.3.2",
    "ipdb>=0.13.13",
    "langchain-openai>=0.3.21",
    "mcp-use>=1.3.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

